overflow fix

--- a/style.scss
+++ b/style.scss
@@ -79,6 +79,8 @@ body{
   font-size: 5vmin;
   text-align: right;
   padding: 0 10px;
+
+  overflow: hidden;
 }
 
 .sup {
